--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <a href="#" class="project-link">Read Case Study</a>
             </div>
 
-            <img src="trailblazer.png" alt="" class="project-img">
+            <img src="trail.png" alt="" class="project-img">
 
         </div>
 
