--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
 
             <div class="project-item-content">
                 <h1>Zivolve</h1>
-                <span>#Website, #Online, #Local-Ecommerce</span>
+                <span>#mobileapp, #Fintech, #AI Investing</span>
                 <h2>AI Investing Assistant</h2>
                 <a href="#" class="project-link">Read Case Study</a>
             </div>
 
-            <img src="Holimart.png" alt="" class="project-img">
+            <div class="project-img">
+                <img src="Holimart.png">
+            </div>
 
         </div>
 
@@ -62,31 +64,37 @@
                 <a href="#" class="project-link">Read Case Study</a>
             </div>
 
-            <img src="Holimart.png" alt="" class="project-img">
+            <div class="project-img">
+                <img src="Holimart.png">
+            </div>
 
         </div>
 
        <div class="project-item">
             <div class="project-item-content">
                 <h1>Trailblazer</h1>
-                <span>#Website, #Online, #Local-Ecommerce</span>
+                <span>#mobileapp, #Fintech, #AI</span>
                 <h2>Hiking Mobile Application to combat Covid-19</h2>
                 <a href="#" class="project-link">Read Case Study</a>
             </div>
 
-            <img src="trail.png" alt="" class="project-img">
+            <div class="project-img">
+                <img src="trail.png">
+            </div>
 
         </div>
 
         <div class="project-item">
             <div class="project-item-content">
                 <h1>WPA</h1>
-                <span>#Website, #Online, #Local-Ecommerce</span>
+                <span>#mobileapp, #Fintech, #AI</span>
                 <h2>Real-estate Simplified for Sellers and Investors</h2>
                 <a href="#" class="project-link">Read Case Study</a>
             </div>
 
-            <img src="wpa.png" alt="" class="project-img">
+            <div class="project-img">
+                <img src="wpa.png">
+            </div>
 
         </div>
         <img class="project-section-end" src="projects-end.png">
