--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <li><a href="#">Resume</a></li>
         </ul>
 
-        <div class="menu">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+        <div class="toggle-button">
+            <div class="bar bar1"></div>
+            <div class="bar bar2"></div>
+            <div class="bar bar3"></div>
         </div>
     </nav>
 
