--- a/slider.html
+++ b/slider.html
@@ -28,8 +28,12 @@
         
         <a href="index.html"><i class="fas fa-times"></i></a>
 
-        <i class="fas fa-chevron-left"></i>
-        <i class="fas fa-chevron-right"></i>
+        <div class="slider-arrows">
+            <i class="fas fa-chevron-left"></i>
+            <h3 class="case-name">Krafted Beer</h3>
+            <i class="fas fa-chevron-right"></i>
+        </div>
+        
     </section>
 </body>
 <script type="module" src="slider.js"></script>
