--- a/slider.html
+++ b/slider.html
@@ -9,6 +9,9 @@
     <title>Project</title>
 </head>
 <body>
+
+ <!--<div class="loader"><i class="fa-solid fa-spinner"></i></div>-->
+
     <nav class="nav">
         <h4>Ralph C. Portfolio</h4>
 
@@ -21,9 +24,7 @@
 
     <section class="slider-section">
         <div class="slider-container">
-            <div class="loader">
-                <i class="fa-solid fa-spinner"></i>
-            </div>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_Blank.svg" alt="" class="slider-img">
         </div>
         
         <a href="index.html"><i class="fas fa-times"></i></a>
