--- a/aboutme.html
+++ b/aboutme.html
@@ -13,11 +13,18 @@
         <h4>Ralph C. Portfolio</h4>
 
         <ul class="links">
-            <li><a href="#">My Work</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="index.html">My Work</a></li>
+            <li><a href="aboutme.html">About</a></li>
             <li><a href="#">Resume</a></li>
         </ul>
+
+        <div class="toggle-button">
+            <div class="bar bar1"></div>
+            <div class="bar bar2"></div>
+            <div class="bar bar3"></div>
+        </div>
     </nav>
+
 
     <header class="about-me-header">
         <div class="white-bg">
