--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                 <a class="btn resume-btn" href="#">Resume</a>
             </div>
         </div>
+
+        <div class="socials">
+            <a href="#"><img src="Group 94.png" alt="linked-in"></a>
+            <a href="#"><img src="Group 95.png" alt="twitter"></a>
+            <a href="#"><img src="Group 96.png" alt="dribble"></a>
+        </div>
     </header>
 
     <section class="projects-section">
