--- a/slider.html
+++ b/slider.html
@@ -6,21 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="slider.css">
     <title>Project</title>
 </head>
 <body>
 
  <!--<div class="loader"><i class="fa-solid fa-spinner"></i></div>-->
 
-    <nav class="nav">
-        <h4>Ralph C. Portfolio</h4>
+ <nav class="nav">
+    <h4>Ralph C. Portfolio</h4>
 
-        <ul class="links">
-            <li><a href="index.html">My Work</a></li>
-            <li><a href="aboutme.html">About</a></li>
-            <li><a href="#">Resume</a></li>
-        </ul>
-    </nav>
+    <ul class="links">
+        <li><a href="index.html">My Work</a></li>
+        <li><a href="aboutme.html">About</a></li>
+        <li><a href="#">Resume</a></li>
+    </ul>
+
+    <div class="toggle-button">
+        <div class="bar bar1"></div>
+        <div class="bar bar2"></div>
+        <div class="bar bar3"></div>
+    </div>
+</nav>
+
 
     <section class="slider-section">
         <div class="slider-container">
@@ -31,7 +39,7 @@
 
         <div class="slider-arrows">
             <i class="fas fa-chevron-left"></i>
-            <h3 class="case-name">Krafted Beer</h3>
+            <h3 class="case-name"></h3>
             <i class="fas fa-chevron-right"></i>
         </div>
         
