--- a/aboutme.html
+++ b/aboutme.html
@@ -102,7 +102,7 @@
             </div>
         </div>
     </section>
-    <script src="app.js"></script>
+    <script src="aboutme.js"></script>
 </body>
 </html>
 
