--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     <section class="projects-section">
         
+        <h1 class="shadow-text">UX Cases</h1>
 
         <div class="project-item project-item-memoji">
             <img class="memoji-1" src="ralph1.png">
